--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,7 +24,7 @@ if (flutterVersionName == null) {
 
 android {
     namespace "com.example.vartameet_computer"
-    compileSdkVersion 33
+    compileSdkVersion 34
     ndkVersion flutter.ndkVersion
 
     compileOptions {
@@ -68,4 +68,4 @@ flutter {
 dependencies {}
 
 
-applicationId "com.example.vartameet_computer"
+// applicationId "com.example.vartameet_computer"
